hphp/test/zend/good/ext/filter/tests/callback_non_modified_var.php
<?php
function callback($var) {
	return $var;
}
$var = "test";
var_dump(filter_var($var, FILTER_CALLBACK, array('options'=>'callback')));
?>